--- a/index.html
+++ b/index.html
@@ -1,9 +1,14 @@
+<!DOCTYPE html>
 <html>
-  <head>
-    <title>Prueba de web</title>
-  </head>
-  <body>
-<h1> Ecalare23.github.io </h1>
- <p>Sitio web de las prácticas de TIC</p>
-  </body>
-</html>
+<head>
+    <meta name="author" content="Eva Callejón Arenas"/>
+    <link rel="stylesheet" type="text/css" href="css/formato.css"/>
+    <link rel="icon" type="image/png" href="img/ies.png"/>
+</head>
+<body>
+    <div class="cuadro">
+        <h1>Bienvenidos a la web de Eva</h1>
+        <p><a href="indice.html"> haz click para acceder a la web</a></p>
+        </div>
+</body>
+</html> 
